--- a/index.html
+++ b/index.html
@@ -30,11 +30,15 @@
                     <li>Me presento, mi nombre completo es <strong>Airton Josue Mendoza Velasquez</strong>, tengo 16 años, nací el 7 de julio del 2004, mis papas son Jesus Mendoza y Pilar Velasquez, tengo 1 hermano, Alex Mendoza y 2 hermanas, Camila Mendoza y Stephany Mendoza, soy el tercer hijo de la familia Mendoza Velasquez, actualmente estoy estudiando <a href="https://es.wikipedia.org/wiki/Ingenier%C3%ADa_de_softwar" target="_blank" class="links">Ingenieria de software</a> en la <a href="https://www.usil.edu.pe/?verified=true" target="_blank" class="links"><strong>Universidad San Ignacio de Loyola (USIL)</strong></a> pero mi carrera y mi malla será remodelada a <a href="https://en.wikipedia.org/wiki/Computer_science" target="_blank" class="links">Computer Science</a>.</li>
                     <a href="https://www.decameron.com/es/otr-destinos/peru/punta-sal/royal-decameron-punta-sal" target="_blank"><img src="https://i.ibb.co/bWzJ6Ww/Airton.jpg" alt="Airton" border="0" class="yo"></a>                
             </ul>
+            <ul><span class="info">¿Como decidiste esta carrera?</span>
+                <li>Pues siempre me gusto esta carrera, aparte de tener el apoyo de mi familia y tambien familia metida en esta carrera, quien realmente me ayudo a estar 100% seguro fue mi profesor <a href="https://jygproyectosweb.com/jeancarlos.html" target="_blank" class="links">Jeancarlos Molina</a> que me enseño las bases de html y css despertando en mi la curiosidad de la programación, tambien en su canal <a href="https://www.youtube.com/channel/UCrh7BmIGftt9I3fcABYoaBA" target="_blank" class="links">J&G Proyectos Web</a> pude aprender mucho más sobre la programación.</li>
+            </ul>
             <ul><span class="info">¿De donde viene y a donde va?</span>
-                <li>Yo nací en <a href="https://www.peru.travel/es/destinos/ica" target="_blank" class="links">ica</a> y he vivido ahí hasta mis 16 años, recien ahora en 2021 vine a vivir a <a href="https://www.peru.travel/es/destinos/lima" target="_blank" class="links">Lima</a> para poder estudiar en <a href="https://www.usil.edu.pe/?verified=true" target="_blank" class="links">USIL</a></li>
+                <li>Yo nací en <a href="https://www.peru.travel/es/destinos/ica" target="_blank" class="links">ica</a> y he vivido ahí hasta mis 16 años, su lugar turistico más visitado es <a href="https://www.peru.travel/es/atractivos/area-de-conservacion-laguna-huacachina" target="_blank" class="links">Huacachina</a>, recien ahora en 2021 vine a vivir a <a href="https://www.peru.travel/es/destinos/lima" target="_blank" class="links">Lima</a> para poder estudiar en <a href="https://www.usil.edu.pe/?verified=true" target="_blank" class="links">USIL</a></li>
+                <img src="https://turismoi.pe/uploads/city/image/20801/medium_ica.jpg" class="img_lugares">
             </ul>
             <ul><span class="info">¿Cuales son sus aficiones?</span>
-                <li>Mi mayor aficion es jugar futbol, antes de la pandemia yo jugaba para el <a href="https://www.facebook.com/ucvclubdefutbol/" target="_blank" class="links">Cesar Vallejo</a></li> 
+                <li>Mi mayor aficion es jugar futbol, antes de la pandemia yo jugaba para el <a href="https://www.facebook.com/ucvclubdefutbol/" target="_blank" class="links">Cesar Vallejo</a> y tambien para la selección de mi colegio</li> 
                 <li>Otra aficion mia es jugar videojuegos.  <ol><i style="color: palegreen;">Mis videojuegos favoritos son:</i></li>
                                                                 <li><a href="https://www.epicgames.com/fortnite/es-ES/home" target="_blank" class="juegos">Fortnite</a></li>
                                                                 <img src="https://cdn2.unrealengine.com/br16-socialshare-lineup1-1920x1080-cc758b8820b8.jpg" class="img_juegos">
@@ -54,7 +58,14 @@
         </section>
         <main>
             <div class="container">
-                
+                <ul><span class="estudios">Estudios</span>
+                    <li>Inicial, parte de primaria y secundaria completa en el colegio <a href="https://dsicolegio.edu.pe/" target="_blank" class="links">Data System´s Ingenieros</a></li>
+                    <img src="https://scontent.flim19-1.fna.fbcdn.net/v/t1.6435-9/75588246_3449938848379524_2543750988724961280_n.jpg?_nc_cat=103&ccb=1-3&_nc_sid=8bfeb9&_nc_eui2=AeFKWdz2aTOkKneJJdeVeWhPAkJ7SFT5gNsCQntIVPmA21Zn-ohmN0v9cbASjMuKM-FIAqLd4TJmJWcuEkKokZ23&_nc_ohc=U3HmGeUgdYYAX8rCKhV&_nc_ht=scontent.flim19-1.fna&oh=a7081b721a7e5ed61c6411c34d2936f1&oe=60D89A02" class="img_lugares">
+                    <li>Parte de primaria en el <a href="https://www.facebook.com/Colegio-Carmelita-Ica-103569958345676/?ref=page_internal" target="_blank" class="links">Colegio Carmelita</a></li>
+                    <img src="https://1.bp.blogspot.com/-IPXWKt1gEiM/V02sZRf5hMI/AAAAAAAAFng/z4-ZFZ88Ut8BVEZmuuSF2xbAubtG9wKpgCLcB/s1600/colegio-carmelita.jpg" class="img_lugares">
+                    <li>Actualmente estoy cursando mis estudios superiores en la <a href="https://www.usil.edu.pe/?verified=true" target="_blank" class="links">Universidad San Ignacio de Loyola</a></li>
+                    <img src="https://live.staticflickr.com/65535/50675177493_3787622e49_z.jpg" class="img_lugares">
+                </ul>
             </div>
         </main>
         <footer>
@@ -377,6 +388,12 @@
                 <td class="carrera">Computer Science</td>
                 <td><a href="https://github.com/" target="_blank" class="dominios">github</a></td>
                 <td><a href="https://francocastillosanchez.github.io/" target="_blank" class="panas">Visitalo!</a></td>
+            </tr>
+            <tr>
+                <td class="compañero">Melanie Cubillas</td>
+                <td class="carrera">Computyer Science</td>
+                <td><a href="https://github.com/" target="_blank" class="dominios">github</a></td>
+                <td><a href="https://melanie-cubillas.github.io/Melanie-Illari-Cubillas-Alfaro/" target="_blank" class="panas">Visitalo!</a></td>
             </tr>
         </table>
         </div> 
