--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                 <td class="compañero">Enma Condor</td>
                 <td class="carrera">Sistemas de Información</td>
                 <td><a href="https://www.dondominio.com/products/domains/me/" target="_blank" class="dominios">me</a></td>
-                <td><a href="https://www.enmamilagroscondormedina.me/" target="_blank" class="panas">Visitalo!</a></td>
+                <td><a href="https://enmamilagroscondormedina.000webhostapp.com/" target="_blank" class="panas">Visitalo!</a></td>
             </tr>
             <tr>
                 <td class="compañero">Fabian Ojeda</td>
@@ -394,6 +394,12 @@
                 <td class="carrera">Computyer Science</td>
                 <td><a href="https://github.com/" target="_blank" class="dominios">github</a></td>
                 <td><a href="https://melanie-cubillas.github.io/Melanie-Illari-Cubillas-Alfaro/" target="_blank" class="panas">Visitalo!</a></td>
+            </tr>
+            <tr>
+                <td class="compañero">Mauro Limachi</td>
+                <td class="carrera">Computer Science</td>
+                <td><a href="https://github.com/" target="_blank" class="dominios">github</a></td>
+                <td><a href="https://aplo612.github.io./" target="_blank" class="panas">Visitalo!</a></td>
             </tr>
         </table>
         </div> 
