--- a/index.html
+++ b/index.html
@@ -401,6 +401,18 @@
                 <td><a href="https://github.com/" target="_blank" class="dominios">github</a></td>
                 <td><a href="https://aplo612.github.io./" target="_blank" class="panas">Visitalo!</a></td>
             </tr>
+            <tr>
+                <td class="compañero">Brigite Quispe</td>
+                <td class="carrera">Compuert Science</td>
+                <td><a href="https://www.000webhost.com/" target="_blank" class="dominios">000webhost</a></td>
+                <td><a href="https://brigiteemilianaquispemartini.000webhostapp.com/" target="_blank" class="panas">Visitalo!</a></td>
+            </tr>
+            <tr>
+                <td>Jean Tello</td>
+                <td>Sistemas de Información</td>
+                <td><a href="https://github.com/" target="_blank" class="dominios"></a></td>
+                <td><a href="https://jean170603.github.io/Jean-Pierre-Tello-Lazaro/" target="_blank" class="panas"></a></td>
+            </tr>
         </table>
         </div> 
         </footer>
