--- a/index.html
+++ b/index.html
@@ -408,10 +408,10 @@
                 <td><a href="https://brigiteemilianaquispemartini.000webhostapp.com/" target="_blank" class="panas">Visitalo!</a></td>
             </tr>
             <tr>
-                <td>Jean Tello</td>
-                <td>Sistemas de Información</td>
-                <td><a href="https://github.com/" target="_blank" class="dominios"></a></td>
-                <td><a href="https://jean170603.github.io/Jean-Pierre-Tello-Lazaro/" target="_blank" class="panas"></a></td>
+                <td class="compañero">Jean Tello</td>
+                <td class="carrera">Sistemas de Información</td>
+                <td><a href="https://github.com/" target="_blank" class="dominios">github</a></td>
+                <td><a href="https://jean170603.github.io/Jean-Pierre-Tello-Lazaro/" target="_blank" class="panas">Visitalo!</a></td>
             </tr>
         </table>
         </div> 
