--- a/index.html
+++ b/index.html
@@ -413,6 +413,12 @@
                 <td><a href="https://github.com/" target="_blank" class="dominios">github</a></td>
                 <td><a href="https://jean170603.github.io/Jean-Pierre-Tello-Lazaro/" target="_blank" class="panas">Visitalo!</a></td>
             </tr>
+            <tr>
+                <td class="compañero">Bill Renzo</td>
+                <td class="carrera">Computer Science</td>
+                <td><a href="https://www.000webhost.com/" target="_blank" class="dominios">000webhost</a></td>
+                <td><a href="https://billrenzocornejocondori.000webhostapp.com/" target="_blank" class="panas">Visitalo!</a></td>
+            </tr>
         </table>
         </div> 
         </footer>
