--- a/index.html
+++ b/index.html
@@ -419,6 +419,30 @@
                 <td><a href="https://www.000webhost.com/" target="_blank" class="dominios">000webhost</a></td>
                 <td><a href="https://billrenzocornejocondori.000webhostapp.com/" target="_blank" class="panas">Visitalo!</a></td>
             </tr>
+            <tr>
+                <td class="compañero">Johao Salazar</td>
+                <td class="carrera">Computer Science</td>
+                <td><a href="https:/github.com/" target="_blank" class="dominios">github</a></td>
+                <td><a href="https://johaosalazarcuyos.github.io/" target="_blank" class="panas">Visitalo!</a></td>
+            </tr>
+            <tr>
+                <td class="compañero">Rodrigo Llontop</td>
+                <td class="carrera">Computer Science</td>
+                <td><a href="https://www.000webhost.com/" target="_blank" class="dominios">000webhost</a></td>
+                <td><a href="https://rodrigo-julio-llontop-calosi.000webhostapp.com/Hobbies/Hobbies.html" target="_blank" class="panas">Visitalo!</a></td>
+            </tr>
+            <tr>
+                <td class="compañero">Nicolas Criado</td>
+                <td class="carrera">Computer Science</td>
+                <td><a href="https:/github.com/" target="_blank" class="dominios">github</a></td>
+                <td><a href="https://nicolax07.github.io/NicolasPatricioCriadoNalvarte./" target="_blank" class="panas">Visitalo!</a></td>
+            </tr>
+            <tr>
+                <td class="compañero">Joaquin Almiron</td>
+                <td class="carrera">Computer Science</td>
+                <td><a href="https:/github.com/" target="_blank" class="dominios">github</a></td>
+                <td><a href="https://joaquinalmiron.github.io/joaquinamiron/" target="_blank" class="panas">Visitalo!</a></td>
+            </tr>
         </table>
         </div> 
         </footer>
