--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <li>Yo nací en <a href="https://www.peru.travel/es/destinos/ica" target="_blank" class="links">ica</a> y he vivido ahí hasta mis 16 años, su lugar turistico más visitado es <a href="https://www.peru.travel/es/atractivos/area-de-conservacion-laguna-huacachina" target="_blank" class="links">Huacachina</a>, recien ahora en 2021 vine a vivir a <a href="https://www.peru.travel/es/destinos/lima" target="_blank" class="links">Lima</a> para poder estudiar en <a href="https://www.usil.edu.pe/?verified=true" target="_blank" class="links">USIL</a></li>
                 <img src="https://turismoi.pe/uploads/city/image/20801/medium_ica.jpg" class="img_lugares">
             </ul>
-            <ul><span class="info">¿Cuales son sus aficiones?</span>
+            <ul><span class="info">¿Cuales son sus pasatiempos?</span>
                 <li>Mi mayor aficion es jugar futbol, antes de la pandemia yo jugaba para el <a href="https://www.facebook.com/ucvclubdefutbol/" target="_blank" class="links">Cesar Vallejo</a> y tambien para la selección de mi colegio</li> 
                 <li>Otra aficion mia es jugar videojuegos.  <ol><i style="color: palegreen;">Mis videojuegos favoritos son:</i></li>
                                                                 <li><a href="https://www.epicgames.com/fortnite/es-ES/home" target="_blank" class="juegos">Fortnite</a></li>
