--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
             </ul>
             <ul><span class="info">¿Cuales son sus pasatiempos?</span>
                 <li>Mi mayor aficion es jugar futbol, antes de la pandemia yo jugaba para el <a href="https://www.facebook.com/ucvclubdefutbol/" target="_blank" class="links">Cesar Vallejo</a> y tambien para la selección de mi colegio</li> 
+                <li>Me gusta mucho ver <a href="https://mundodragonball.com/" target="_blank" class="links">Dragon Ball</a> y nunca creí que Goku llegaria al poder de los dioses</li>
+                <img src="https://elcomercio.pe/resizer/LQ-7jhi4Ty8UDnMTRsX8a1_OGUM=/1200x675/smart/filters:format(jpeg):quality(75)/arc-anglerfish-arc2-prod-elcomercio.s3.amazonaws.com/public/UT5IS6DB75BC5KFOTCZZL2LS2A.jpg" class="img_pasatiempos">
+                <li>Tambien me gusta ver <a href="https://animanga.es/anime/naruto-shippuden/" target="_blank" class="links">Naruto Shippuden</a> y aunque aun no lo termino igual me esta gustando mucho</li>
+                <img src="https://cdn.hobbyconsolas.com/sites/navi.axelspringer.es/public/styles/480/public/media/image/2014/07/363612-avance-naruto-shippuden-uns-revolution.jpg?itok=G12cWtoV" class="img_pasatiempos">
                 <li>Otra aficion mia es jugar videojuegos.  <ol><i style="color: palegreen;">Mis videojuegos favoritos son:</i></li>
                                                                 <li><a href="https://www.epicgames.com/fortnite/es-ES/home" target="_blank" class="juegos">Fortnite</a></li>
                                                                 <img src="https://cdn2.unrealengine.com/br16-socialshare-lineup1-1920x1080-cc758b8820b8.jpg" class="img_juegos">
