--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
             </tr>
             <tr>
                 <td class="compañero">Arnold Pajuelo</td>
-                <td class="carrera">Compuer Science</td>
+                <td class="carrera">Computer Science</td>
                 <td><a href="https://www.dondominio.com/products/domains/me/" target="_blank" class="dominios">me</a></td>
                 <td><a href="https://arnoldpajueloaraujo.me/" target="_blank" class="panas">Visitalo!</a></td>
             </tr>
@@ -395,7 +395,7 @@
             </tr>
             <tr>
                 <td class="compañero">Melanie Cubillas</td>
-                <td class="carrera">Computyer Science</td>
+                <td class="carrera">Computer Science</td>
                 <td><a href="https://github.com/" target="_blank" class="dominios">github</a></td>
                 <td><a href="https://melanie-cubillas.github.io/Melanie-Illari-Cubillas-Alfaro/" target="_blank" class="panas">Visitalo!</a></td>
             </tr>
@@ -407,7 +407,7 @@
             </tr>
             <tr>
                 <td class="compañero">Brigite Quispe</td>
-                <td class="carrera">Compuert Science</td>
+                <td class="carrera">Computer Science</td>
                 <td><a href="https://www.000webhost.com/" target="_blank" class="dominios">000webhost</a></td>
                 <td><a href="https://brigiteemilianaquispemartini.000webhostapp.com/" target="_blank" class="panas">Visitalo!</a></td>
             </tr>
@@ -446,6 +446,12 @@
                 <td class="carrera">Computer Science</td>
                 <td><a href="https:/github.com/" target="_blank" class="dominios">github</a></td>
                 <td><a href="https://joaquinalmiron.github.io/joaquinamiron/" target="_blank" class="panas">Visitalo!</a></td>
+            </tr>
+            <tr>
+                <td class="compañero">Axel Polick</td>
+                <td class="carrera">Computer Science</td>
+                <td><a href="https://github.com/" target="_blank" class="dominios" >github</a></td>
+                <td><a href="https://axelpolick.github.io/" target="_blank" class="panas">Visitalo!</a></td>
             </tr>
         </table>
         </div> 
