--- a/index.html
+++ b/index.html
@@ -453,6 +453,12 @@
                 <td><a href="https://github.com/" target="_blank" class="dominios" >github</a></td>
                 <td><a href="https://axelpolick.github.io/" target="_blank" class="panas">Visitalo!</a></td>
             </tr>
+            <tr>
+                <td class="compañero">Daniel Quispe</td>
+                <td class="carrera">Computer Science</td>
+                <td><a href="https://www.000webhost.com/" target="_blank" class="dominios">000webhost</a></td>
+                <td><a href="https://danielquispeccorahua123.000webhostapp.com/" target="_blank" class="panas">Visitalo!</a></td>
+            </tr>
         </table>
         </div> 
         </footer>
