--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Airton Mendoza</title>
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <meta name="google-site-verification" content="01oPjkiqCT_kzxlhSDSdhf7X6i6e_mkZnS7HFYxgiD4" />
         <link rel="stylesheet" href="estilos.css">
     </head>
     <body>
