--- a/index.html
+++ b/index.html
@@ -460,6 +460,12 @@
                 <td><a href="https://www.000webhost.com/" target="_blank" class="dominios">000webhost</a></td>
                 <td><a href="https://danielquispeccorahua123.000webhostapp.com/" target="_blank" class="panas">Visitalo!</a></td>
             </tr>
+            <tr>
+                <td class="compañero">Gabriel Corrales</td>
+                <td class="carrera">Sistemas de Información</td>
+                <td><a href="https://www.000webhost.com/" target="_blank" class="dominios">000webhost</a></td>
+                <td><a href="https://gabrielcorrales.000webhostapp.com/" target="_blank" class="panas">Visitalo!</a></td>
+            </tr>
         </table>
         </div> 
         </footer>
