--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             <tr>
                 <td class="compañero">Enma Condor</td>
                 <td class="carrera">Sistemas de Información</td>
-                <td><a href="https://www.dondominio.com/products/domains/me/" target="_blank" class="dominios">me</a></td>
+                <td><a href="https://www.000webhost.com/" target="_blank" class="dominios">000webhost</a></td>
                 <td><a href="https://enmamilagroscondormedina.000webhostapp.com/" target="_blank" class="panas">Visitalo!</a></td>
             </tr>
             <tr>
@@ -465,6 +465,30 @@
                 <td class="carrera">Sistemas de Información</td>
                 <td><a href="https://www.000webhost.com/" target="_blank" class="dominios">000webhost</a></td>
                 <td><a href="https://gabrielcorrales.000webhostapp.com/" target="_blank" class="panas">Visitalo!</a></td>
+            </tr>
+            <tr>
+                <td class="compañero">Andy Morales</td>
+                <td class="carrera">Computer Science</td>
+                <td><a href="https://www.000webhost.com/" target="_blank" class="dominios">000webhost</a></td>
+                <td><a href="https://andyrolandomoralessegura24.000webhostapp.com/" target="_blank" class="panas">Visitalo!</a></td>
+            </tr>
+            <tr>
+                <td class="compañero">Junior Perez</td>
+                <td class="carrera">Sistemas de Información</td>
+                <td><a href="https://www.000webhost.com/" target="_blank" class="dominios">000webhost</a></td>
+                <td><a href="https://juniorabrahamperezhuamani.000webhostapp.com/" target="_blank" class="panas">Visitalo!</a></td>
+            </tr>
+            <tr>
+                <td class="compañero">Luis Nuñez</td>
+                <td class="carrera">Computer Science</td>
+                <td><a href="https://github.com/" target="_blank" class="dominios">github</a></td>
+                <td><a href="https://luisoswaldonunezzavala.github.io/" target="_blank" class="panas">Visitalo!</a></td>
+            </tr>
+            <tr>
+                <td class="compañero">Santiago Gutierrez</td>
+                <td class="carrera">Sistemas de Información</td>
+                <td><a href="" target="_blank" class="dominios">??</a></td>
+                <td><a href="http://evirtuales.com/SantiagoDavidGutierrezSoria.html" target="_blank" class="panas">Visitalo!</a></td>
             </tr>
         </table>
         </div> 
