--- a/index.html
+++ b/index.html
@@ -496,6 +496,36 @@
                 <td><a href="https://www.000webhost.com/" target="_blank" class="dominios">000webhost</a></td>
                 <td><a href="https://andyrolandomoralessegura24.000webhostapp.com/" target="_blank" class="panas">Visitalo!</a></td>
             </tr>
+            <tr>
+                <td class="compañero">Aron Macukachi</td>
+                <td class="carrera">Computer Science</td>
+                <td><a href="https://www.000webhost.com/" target="_blank" class="dominios">000webhost</a></td>
+                <td><a href="https://aronmacukachi1.github.io/Aron-Fabian-Macukachi-Nolasco/" target="_blank" class="panas">Visitalo!</a></td>
+            </tr>
+            <tr>
+                <td class="compañero">Williams Cántaro</td>
+                <td class="carrera">Computer Science</td>
+                <td><a href="https://www.000webhost.com/" target="_blank" class="dominios">000webhost</a></td>
+                <td><a href="https://williamscantaro.000webhostapp.com/" target="_blank" class="panas">Visitalo!</a></td>
+            </tr>
+            <tr>
+                <td class="compañero">Marcelo Castañeda</td>
+                <td class="carrera">Computer Science</td>
+                <td><a href="https://github.com/" target="_blank" class="dominios">github</a></td>
+                <td><a href="https://hulkie10.github.io/Marcelo-Andres-Castaneda-Salerno.github.io/" target="_blank" class="panas">Visitalo!</a></td>
+            </tr>
+            <tr>
+                <td class="compañero">Angelo Espinoza</td>
+                <td class="carrera">Computer Science</td>
+                <td><a href="https://github.com/" target="_blank" class="dominios">github</a></td>
+                <td><a href="https://ninomaster555.github.io/angeloespinozapizarro.github.io/" target="_blank" class="panas">Visitalo!</a></td>
+            </tr>
+            <tr>
+                <td class="compañero">Ismael Corpuna</td>
+                <td class="carrera">Computer Science</td>
+                <td><a href="https://github.com/" target="_blank" class="dominios">github</a></td>
+                <td><a href="https://toxicale.github.io/Ismael_Corpuna.github.io/" target="_blank" class="panas">Visitalo!</a></td>
+            </tr>
         </table>
         </div> 
         </footer>
