--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                 <td><a href="https://alexanderdp345.github.io/KEVIN-ALEXANDER-DURAND-PIZARRO/" target="_blank" class="panas">Visitalo!</a></td>
             </tr>
             <tr>
-                <td class="compañero">Adrian Loza</td>
+                <td class="compañero">Adrian Lozano</td>
                 <td class="carrera">Sistemas de Información</td>
                 <td><a href="https://www.000webhost.com/" target="_blank" class="dominios">000webhost</a></td>
                 <td><a href="https://fundacionbj.000webhostapp.com/" target="_blank" class="panas">Visitalo!</a></td>
@@ -525,6 +525,18 @@
                 <td class="carrera">Computer Science</td>
                 <td><a href="https://github.com/" target="_blank" class="dominios">github</a></td>
                 <td><a href="https://toxicale.github.io/Ismael_Corpuna.github.io/" target="_blank" class="panas">Visitalo!</a></td>
+            </tr>
+            <tr>
+                <td class="compañero">Aldair Lago</td>
+                <td class="carrera">Sistemas De Información</td>
+                <td><a href="https://www.000webhost.com/" target="_blank" class="dominios">000webhost</a></td>
+                <td><a href="http://aldairjeffersonlagovillano.gq/" target="_blank" class="panas">Visitalo!</a></td>
+            </tr>
+            <tr>
+                <td class="compañero">Salvador Delgado</td>
+                <td class="carrera">Computer Science</td>
+                <td><a href="https://www.000webhost.com/" target="_blank" class="dominios">000webhost</a></td>
+                <td><a href="http://salvadordelgado.000webhostapp.com/" target="_blank" class="panas">Visitalo!</a></td>
             </tr>
         </table>
         </div> 
