--- a/index.html
+++ b/index.html
@@ -538,6 +538,12 @@
                 <td><a href="https://www.000webhost.com/" target="_blank" class="dominios">000webhost</a></td>
                 <td><a href="http://salvadordelgado.000webhostapp.com/" target="_blank" class="panas">Visitalo!</a></td>
             </tr>
+            <tr>
+                <td class="compañero">Tatiana Estrada</td>
+                <td class="carrera">Computer Science</td>
+                <td><a href="https://www.000webhost.com/" target="_blank" class="dominios">000webhost</a></td>
+                <td><a href="https://tatiananoemiestradacarmen1.000webhostapp.com/TatianaEstrada.html" target="_blank" class="panas">Visitalo!</a></td>
+            </tr>
         </table>
         </div> 
         </footer>
