--- a/index.html
+++ b/index.html
@@ -544,6 +544,24 @@
                 <td><a href="https://www.000webhost.com/" target="_blank" class="dominios">000webhost</a></td>
                 <td><a href="https://tatiananoemiestradacarmen1.000webhostapp.com/TatianaEstrada.html" target="_blank" class="panas">Visitalo!</a></td>
             </tr>
+            <tr>
+                <td class="compañero">Arturo Bustamante</td>
+                <td class="carrera">Sistemas de Información</td>
+                <td><a href="https://www.github.com/" target="_blank" class="dominios">github</a></td>
+                <td><a href="https://arleus.github.io/ArturoBustamante.github.io/" target="_blank" class="panas">Visitalo!</a></td>
+            </tr>
+            <tr>
+                <td class="compañero">Pedro Torres</td>
+                <td class="carrera">Sistemas de Información</td>
+                <td><a href="https://www.dondominio.com/products/domains/me/" target="_blank" class="dominios">.me</a></td>
+                <td><a href="https://pedroarnaldotorreschahua.me/" target="_blank" class="panas">Visitalo!</a></td>
+            </tr>
+            <tr>
+                <td class="compañero">Andra Roman</td>
+                <td class="carrera">Computer Science</td>
+                <td><a href="https://www.000webhost.com/" target="_blank" class="dominios">000webhost</a></td>
+                <td><a href="https://paginadepresentacionthays.000webhostapp.com/" target="_blank" class="panas">Visitalo!</a></td>
+            </tr>
         </table>
         </div> 
         </footer>
