--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
                 <td><a href="https://pedroarnaldotorreschahua.me/" target="_blank" class="panas">Visitalo!</a></td>
             </tr>
             <tr>
-                <td class="compañero">Andra Roman</td>
+                <td class="compañero">Andrea Roman</td>
                 <td class="carrera">Computer Science</td>
                 <td><a href="https://www.000webhost.com/" target="_blank" class="dominios">000webhost</a></td>
                 <td><a href="https://paginadepresentacionthays.000webhostapp.com/" target="_blank" class="panas">Visitalo!</a></td>
