--- a/index.html
+++ b/index.html
@@ -562,6 +562,12 @@
                 <td><a href="https://www.000webhost.com/" target="_blank" class="dominios">000webhost</a></td>
                 <td><a href="https://paginadepresentacionthays.000webhostapp.com/" target="_blank" class="panas">Visitalo!</a></td>
             </tr>
+            <tr>
+                <td class="compañero">Frank Pérez</td>
+                <td class="carrera">Computer Science</td>
+                <td><a href="https://www.github.com/" target="_blank" class="dominios">github</a></td>
+                <td><a href="https://frankboz.github.io/frankperezdelacruz.github.io/FrankPerezDelacruz.html" target="_blank" class="panas">Visitalo!</a></td>
+            </tr>
         </table>
         </div> 
         </footer>
