--- a/index.html
+++ b/index.html
@@ -456,10 +456,10 @@
             </tr>
             <tr>
                 <td class="compañero">Daniel Quispe</td>
-                <td class="carrera">Computer Science</td>
-                <td><a href="https://www.000webhost.com/" target="_blank" class="dominios">000webhost</a></td>
-                <td><a href="https://danielquispeccorahua123.000webhostapp.com/" target="_blank" class="panas">Visitalo!</a></td>
-            </tr>
+                <td class="carrera">Sistemas de Información</td>
+                <td><a href="https://www.github.com/" target="_blank" class="dominios">github</a></td>
+                <td><a href="https://danielquispe1x2.github.io/p-ginaweb/" target="_blank" class="panas">Visitalo!</a></td>
+            </tr>   
             <tr>
                 <td class="compañero">Gabriel Corrales</td>
                 <td class="carrera">Sistemas de Información</td>
