--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                 <td class="compañero">Italo Acosta</td>
                 <td class="carrera">Computer Science</td>
                 <td><a href="https://github.com/" target="_blank" class="dominios">github</a></td>
-                <td><a href="http://italoacostabonija.me/italoacosta.github.io/" target="_blank" class="panas">Visitalo!</a></td>
+                <td><a href="https://italo17.github.io/italoacosta/" target="_blank" class="panas">Visitalo!</a></td>
             </tr>
             <tr>
                 <td class="compañero">Rogger Yañez</td>
