--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
                 <td class="compañero">Frank Pérez</td>
                 <td class="carrera">Computer Science</td>
                 <td><a href="https://www.github.com/" target="_blank" class="dominios">github</a></td>
-                <td><a href="https://frankboz.github.io/frankperezdelacruz.github.io/FrankPerezDelacruz.html" target="_blank" class="panas">Visitalo!</a></td>
+                <td><a href="https://frankboz.github.io/" target="_blank" class="panas">Visitalo!</a></td>
             </tr>
         </table>
         </div> 
